<resources>
    <string name="app_name">Dice SDM</string>
    <string name="clique_no_botao_abaixo_para_jogar_o_dado">Clique no botão abaixo para jogar o dado!</string>
    <string name="jogar">Jogar</string>
    <string name="ainda_nao_foi_lancado">Ainda não foi lançado</string>
    <string name="face_sorteada_result">Face sorteada:</string>
    <string name="selecione_o_numero_de_dados">Selecione o número de dados</string>
    <string name="entre_com_o_numero_de_faces">Entre com o número de faces</string>
    <string name="salvar">Salvar</string>
    <string-array name="numero_dados">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
